Refatora classes Cliente e ETL para melhorar o processamento de alertas e otimiza a manipulação de requisições HTTP